# ros1-test

./: README.md
catkin_ws/src/mobile_manipulator/: CMakeLists.txt
catkin_ws/src/mobile_manipulator/launch/: display.launch
catkin_ws/src/mobile_manipulator/urdf/: sensors.xacro
catkin_ws/src/robot_arm_config/launch/: fake_moveit_controller_manager.launch.xml  planning_context.launch
catkin_ws/src/robot_behavior/: CMakeLists.txt  package.xml  setup.py
catkin_ws/src/robot_behavior/scripts/: mission_node.py
catkin_ws/src/robot_navigation/config/: global_costmap_params.yaml  local_costmap_params.yaml
docs/: frames.gv  navegation_diagram.drawio
src/app/robot_app_behavior/: CMakeLists.txt  package.xml  setup.py
src/app/robot_app_simulation/: CMakeLists.txt  README.md  package.xml
src/app/robot_app_simulation/launch/: full_simulation.launch  gazebo_moveit.launch
src/app/robot_arm/: CMakeLists.txt  README.md  package.xml
src/app/robot_arm/config/: controllers.yaml  joint_limits.yaml  mobile_manipulator.srdf  robot_arm.srdf
src/app/robot_arm/launch/: demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  planning_context.launch  planning_pipeline.launch.xml  robot_arm_moveit_sensor_manager.launch.xml  sensor_manager.launch.xml  simple_moveit_controller_manager.launch.xml  trajectory_execution.launch.xml
src/app/robot_arm_controller/: CMakeLists.txt  package.xml
src/app/robot_arm_controller/config/: trajectory_controllers.yaml
src/app/robot_arm_controller/include/robot_arm_controller/: robot_arm_interface.h
src/app/robot_arm_controller/src/: angles_converter.cpp  robot_arm_interface.cpp
src/app/robot_arm_description/: CMakeLists.txt  package.xml
src/app/robot_arm_description/launch/: display.launch  gazebo.launch
src/app/robot_arm_moveit/: .setup_assistant  CMakeLists.txt  package.xml
src/app/robot_arm_moveit/config/: fake_controllers.yaml  ompl_planning.yaml  robot_arm.srdf  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
src/app/robot_arm_moveit/launch/: demo.launch  ros_controllers.launch
src/app/robot_base_description/: CMakeLists.txt  README.md
src/app/robot_base_description/urdf/: manipulator_arm.xacro  robot.xacro
src/app/robot_behavior/: README.md  package.xml
src/app/robot_behavior/scripts/: arm_action.py  main_mission.py
src/app/robot_behavior/src/robot_behavior/: manipulation.py
src/app/robot_description/: CMakeLists.txt  package.xml
src/app/robot_description/launch/: display.launch  gazebo.launch  simulation.launch
src/app/robot_description/urdf/: robot.xacro
src/app/robot_navigation/: package.xml
src/app/robot_navigation/config/: costmap_common_params.yaml  dwa_local_planner_params.yaml  move_base_params.yaml  teb_local_planner_params.yaml
src/app/robot_navigation/launch/: navigation.launch
src/app/robot_navigation/rviz/: navigation.rviz
src/app/robot_simulation/: CMakeLists.txt  package.xml
src/app/robot_simulation/launch/: full_simulation.launch  gazebo_navigation.launch
src/mobile_manipulator/: package.xml
src/mobile_manipulator/launch/: simulation.launch
src/mobile_manipulator/urdf/: robot.xacro
src/robot_arm_config/: CMakeLists.txt  package.xml
src/robot_arm_config/config/: ompl_planning.yaml
src/robot_arm_config/launch/: demo.launch  move_group.launch  planning_pipeline.launch.xml  sensor_manager.launch.xml  trajectory_execution.launch.xml
src/robot_behavior/scripts/: nav_action.py
src/robot_behavior/src/robot_behavior/: navigation.py
src/robot_navigation/: CMakeLists.txt
src/robot_navigation/config/: costmap_common_params.yaml  move_base_params.yaml
src/robot_navigation/launch/: navigation.launch
src/robot_navigation/maps/: map.pgm
src/robots/robot_manipulator/app/robot_manipulator_moveit/: .setup_assistant  CMakeLists.txt  package.xml
src/robots/robot_manipulator/app/robot_manipulator_moveit/config/: gazebo_robot_arm.urdf  kinematics.yaml
src/robots/robot_manipulator/app/robot_manipulator_moveit/launch/: gazebo.launch  move_group.launch  planning_context.launch
src/robots/robot_manipulator/machine/robot_arm_controller/: CMakeLists.txt  package.xml
src/robots/robot_manipulator/machine/robot_arm_controller/config/: joint_state_controller.yaml
src/robots/robot_manipulator/machine/robot_arm_controller/launch/: controller.launch
src/robots/robot_manipulator/machine/robot_arm_controller/scripts/: angles_converter.py
src/robots/robot_manipulator/machine/robot_arm_description/: CMakeLists.txt  package.xml
src/robots/robot_manipulator/machine/robot_arm_description/launch/: display.launch  gazebo.launch
src/robots/robot_manipulator/machine/robot_arm_description/rviz/: rviz_moveit.rviz
src/robots/robot_manipulator/machine/robot_arm_description/urdf/: robot_arm.urdf.xacro
src/robots/robot_mobile/app/robot_mobile_navigation/: CMakeLists.txt  README.md  package.xml
src/robots/robot_mobile/machine/robot_mobile_description/: CMakeLists.txt  README.md  package.xml
src/robots/robot_mobile/machine/robot_mobile_description/launch/: display.launch  gazebo.launch
src/robots/robot_mobile/machine/robot_mobile_description/urdf/: robot.xacro
