<?xml version="1.0"?>
<package format="2">
  <name>robot_arm</name>
  <version>0.3.0</version>
  <description>The robot_arm package</description>

  <maintainer email="student@example.com">Student</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>moveit_core</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_ros_visualization</depend>
  <depend>moveit_planners_ompl</depend>
  <depend>joint_state_publisher</depend>
  <depend>robot_state_publisher</depend>
  <depend>xacro</depend>
  <depend>robot_description</depend>
  <depend>moveit_ros_move_group</depend>

</package>
