<package format="2">
<name>robot_arm_controller</name>
<version>0.0.0</version>
<description>The robot_arm_controller package</description>
<maintainer email="ismael.pbt@gmail.com">Ismael Poblete</maintainer>
<license>MIT</license>
<author email="ismael.pbt@gmail.com">Ismael Poblete</author>
<buildtool_depend>catkin</buildtool_depend>
<build_depend>roscpp</build_depend>
<build_depend>rospy</build_depend>
<build_depend>std_msgs</build_depend>
<build_depend>controller_manager</build_depend>
<build_depend>hardware_interface</build_depend>
<build_export_depend>roscpp</build_export_depend>
<build_export_depend>rospy</build_export_depend>
<build_export_depend>std_msgs</build_export_depend>
<build_export_depend>controller_manager</build_export_depend>
<build_export_depend>hardware_interface</build_export_depend>
<exec_depend>roscpp</exec_depend>
<exec_depend>rospy</exec_depend>
<exec_depend>std_msgs</exec_depend>
<exec_depend>message_runtime</exec_depend>
<exec_depend>controller_manager</exec_depend>
<exec_depend>hardware_interface</exec_depend>
</package>