<?xml version="1.0"?>
<package format="2">
  <name>robot_simulation</name>
  <version>0.0.1</version>
  <description>
    The robot_simulation package provides comprehensive launch files that integrate
    multiple robot subsystems including description, navigation, and manipulation.
  </description>

  <maintainer email="ismael.pbt@gmail.com">Ismael Poblete</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies on other app packages -->
  <exec_depend>robot_description</exec_depend>
  <exec_depend>robot_navigation</exec_depend>
  <exec_depend>robot_arm</exec_depend>
  <exec_depend>robot_behavior</exec_depend>

  <!-- ROS core dependencies -->
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>

  <!-- Navigation dependencies -->
  <exec_depend>map_server</exec_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>move_base</exec_depend>

  <!-- MoveIt dependencies -->
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>

  <export>
  </export>
</package>
